# nox-core

./: .clang-tidy  .clangd  CMakeLists.txt  README.md  compile_commands.json
include/: pch.hpp
include/nox-core/: ast-node.hpp
include/nox-core/logging/: log.cpp  log.hpp
include/prism/: ast-node.hpp  json-serialization.hpp
include/prism/logging/: log.cpp  log.hpp
src/: main.cpp  test-input.cpp  test-input.hpp
src/example/: test-input.cpp  test-input.hpp
test/: test-main.cpp
